Fix color & spacing

--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -8,12 +8,14 @@
     flex-direction: column;
     justify-content: flex-start;
     padding-left: 1.5rem;
-    gap: 0.5rem;
+    gap: 0.7rem;
 }
 .showButton{
     display: flex;
     gap: 0.5rem;
     align-items: center;
+    color: #6c7275;
+    margin-top: 0.5rem;
 }
 
 .price{
